# cookiecutter-python

./: .gitignore  Pipfile  README.md  cookiecutter.json  pyproject.toml  requirements.txt  setup.cfg
hooks/: post_gen_project.py  pre_gen_project.py
tests/: conftest.py  test_common.py  test_cookiecutter_python.py  test_open_source.py  test_private_project.py
{{cookiecutter.project_name}}/: .coveragerc  .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  LICENSE  Pipfile  README.md  publish.sh  pyproject.toml  pytest.ini  run-tests.sh  setup.cfg  setup.py
{{cookiecutter.project_name}}/.githooks/: pre-commit  pre-push
{{cookiecutter.project_name}}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.project_slug}}/: .editorconfig  .gitignore  .python-version  Pipfile  README.md  setup.cfg  setup.py
{{cookiecutter.project_slug}}/tests/: test_{{cookiecutter.package_name}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.package_name}}/: main.py
