[tool.poetry]
name = "cookiecutter-python"
version = "0.1.0"
description = ""
authors = ["Dmitry Voronin <dimka665@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "cookiecutter_python"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
ipython = "^8.19.0"
ipython-autoimport = "^0.4"
pytest = "^7.4.4"
pytest-cookies = "^0.7.0"
tomlkit = "^0.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
