[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.project_description}}"
authors = ["{{cookiecutter.full_name}} <{{cookiecutter.email}}>"]

repository = "{{cookiecutter.git_http}}"
{%- if cookiecutter.open_source == 'y' %}
license = "MIT"
{%- else %}
license = "Proprietary"
{%- endif %}
classifiers = [
    {%- if cookiecutter.open_source == 'y' %}
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: {{cookiecutter.python_version}}",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    {%- else %}
    "Private :: Do Not Upload",
    {%- endif %}
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
ipython = "*"
pytest = "*"
pytest-cov = "*"
pytest-flake8 = "*"
pytest-pythonpath = "*"
mypy = "*"
{% if cookiecutter.docs == 'y' -%}
sphinx = "*"
sphinx-autobuild = "*"
{% endif -%}

[tool.mypy]
check_untyped_defs = true

{% if cookiecutter.open_source == 'y' -%}
[tool.tox.tox]
envlist = "py{{ cookiecutter.python_version.replace('.', '') }}{% if cookiecutter.docs == 'y' %}, docs{% endif %}"
skipsdist = true

#[testenv]
#skip_install = true
#deps = pipenv
#commands =
#    pipenv install --dev --skip-lock
#    pipenv run fulltest
#
#[testenv:docs]
#basepython = python{{ cookiecutter.python_version }}
#deps =
#    pipenv
#    sphinx
#commands =
#    pipenv install --skip-lock
#    pipenv run doctest
#    pipenv run build-docs
{%- endif %}

#[scripts]
#test = "pytest --exitfirst --failed-first"
#fulltest = "pytest --flake8 --cov --cov-fail-under=80 --no-cov-on-fail {{cookiecutter.package_name}} tests docs/conf.py"
## We use equivalent of "make mode":
## sphinx-build -M builder source build  =>
## sphinx-build -b builder -d source/doctrees source build/builder
#docs = "sphinx-autobuild --open-browser --port 0 --delay 1 -d docs/_build/doctrees docs docs/_build/html"
#doctest = "sphinx-build -b doctest -d docs/_build/doctrees docs docs/_build/doctest"
#build-docs = "sphinx-build -b html -d docs/_build/doctrees docs docs/_build/html"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
