[metadata]
name = {{cookiecutter.project_name}}
version = attr: {{cookiecutter.package_name}}.__version__

author = {{cookiecutter.full_name}}
author_email = {{cookiecutter.email}}
url = https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_name}}

description = {{cookiecutter.project_description}}
keywords =

{%- if cookiecutter.open_source == 'y' %}
license = MIT license
{%- endif %}
classifiers =
    {%- if cookiecutter.open_source == 'y' %}
    License :: OSI Approved :: MIT license
    {%- endif %}
    Programming Language :: Python :: {{cookiecutter.python_version}}
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:

{% if cookiecutter.open_source == 'y' -%}
[tox]
soma = soma
{%- endif %}

[tool:pytest]
testpaths = tests
norecursedirs =
    .*/
    doc/

[flake8]
max-line-length = {{cookiecutter.python_max_line_length}}
exclude =
    .git/
    .venv/
    doc/

[coverage:run]
branch = True
source =
    {{cookiecutter.package_name}}/

[mypy]
check_untyped_defs = yes

[bumpr]
file = {{cookiecutter.package_name}}/__init__.py
files = setup.py
tests = pytest
vcs = git
;publish = python setup.py sdist upload
verbose = yes

[bumpr:bump]
part = patch
